--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.3",
     "@nomicfoundation/hardhat-verify": "~2.0.3",
-    "hardhat-deploy": "~0.11.45",
-    "hardhat-deploy-ethers": "~0.4.1"
+    "hardhat": "^2.22.3",
+    "hardhat-deploy-ethers": "^0.4.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
